--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -25,10 +25,10 @@ $base: (
   font-size-h5-lg:        1.25rem,
   font-size-h6-lg:        1.25rem,
 
-  font-size-h1:           2.5rem,
-  font-size-h2:           1.9rem,
-  font-size-h3:           1.5rem,
-  font-size-h4:           1.2rem,
+  font-size-h1:           2rem,
+  font-size-h2:           1.6rem,
+  font-size-h3:           1.2rem,
+  font-size-h4:           1rem,
   font-size-h5:           1rem,
   font-size-h6:           1rem,
 
@@ -46,7 +46,8 @@ $base: (
   font-size-h5-xs:        .85rem,
   font-size-h6-xs:        .85rem,
 
-  font-weight:            400,
+  font-weight-light:      300,
+  font-weight:            300,
   font-weight-bold:       700,
 
   line-height-xl:         2,
