--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,7 @@ layout: none
 {%- include snippets/get-lang.html -%}
 <html lang="{{ __return }}">
   <head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:400|Chivo:400|Work+Sans:500,300,600,300italic,400italic,500italic,600italic|Chivo:500,300,600,300italic,400italic,500italic,600italic">
     {%- include analytics.html -%}
     {%- include head.html -%}
     <script>
