--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -1,5 +1,5 @@
 $base: (
-  font-family:            (-apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif),
+  font-family:            ("Work Sans", sans-serif),
   font-family-code:       (Menlo, Monaco, Consolas, Andale Mono, lucida console, Courier New, monospace),
 
   font-size-root:         16px,
@@ -47,7 +47,7 @@ $base: (
   font-size-h6-xs:        .85rem,
 
   font-weight-light:      300,
-  font-weight:            300,
+  font-weight:            400,
   font-weight-bold:       500,
 
   line-height-xl:         2,
